Fixed crash due to unsupported list manipulation. Basic recipe with anvil works